Renaming in outliner doesn't update icons position #59626

Closed
opened 2018-12-19 17:21:10 +01:00 by Oleg · 6 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GTX 1050 TI

Blender Version
Broken:
2.80, be98fcc6e2, blender2.8, 2018-12-19

Short description of error
When renaming object/collection in outliner icons on the right (data types) is overlapping the text.

Exact steps for others to reproduce the error
Try to rename object/collection in default scene in outliner.

RenameObjects.gif

**System Information** Operating system: Windows 10 Graphics card: Nvidia GTX 1050 TI **Blender Version** Broken: 2.80, be98fcc6e27e, blender2.8, 2018-12-19 **Short description of error** When renaming object/collection in outliner icons on the right (data types) is overlapping the text. **Exact steps for others to reproduce the error** Try to rename object/collection in default scene in outliner. ![RenameObjects.gif](https://archive.blender.org/developer/F6008055/RenameObjects.gif)
Author

Added subscriber: @DotBow

Added subscriber: @DotBow

Added subscriber: @brecht

Added subscriber: @brecht
Campbell Barton was assigned by Brecht Van Lommel 2018-12-19 17:43:58 +01:00

Probably caused by f4c70a3.

I guess this background just needs to become opaque.

Probably caused by f4c70a3. I guess this background just needs to become opaque.
Author

In #59626#584709, @brecht wrote:
Probably caused by f4c70a3.

I guess this background just needs to become opaque.

The 2.79 behavior is good enough I think
RenameObjects279.gif

> In #59626#584709, @brecht wrote: > Probably caused by f4c70a3. > > I guess this background just needs to become opaque. The 2.79 behavior is good enough I think ![RenameObjects279.gif](https://archive.blender.org/developer/F6008367/RenameObjects279.gif)

This issue was referenced by c4ee77cde8

This issue was referenced by c4ee77cde8b0526412da0a626d16877205d3244c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59626
No description provided.